test/variables/sungeun/refvar-no-init-with-def.good
refvar-no-init-with-def.chpl:2: error: Cannot set a reference to a param variable.
