test/variables/sungeun/refvar-no-init-with-def.chpl
ref r: int;
r = 1;
